family uft 确认缴费

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
@@ -9,8 +9,14 @@
 	#end
 	<link rel="shortcut icon" href="${staticDomain}/favicon.ico" type="image/x-icon">
 	#if(${family_module} == "uft")
-		<link rel="stylesheet" href="${staticDomain}/family/css/style.css">
-		<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
+		#if(${family_page} == "payconfirm_result")
+			<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
+	    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
+	    	<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
+	    #else
+			<link rel="stylesheet" href="${staticDomain}/family/css/style.css">
+			<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
+		#end
 	#elseif(${family_module} == "index" || ${family_module} == "account"
 			|| ${family_page} == "ufb_index")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
