--- a/ufb.web/src/main/webapp/static/family/css/style.css
+++ b/ufb.web/src/main/webapp/static/family/css/style.css
@@ -841,7 +841,7 @@ i.email-notice{
 	margin-bottom:40px;
 }
 .sideFixed .a1 a:first-child{
-	background-image:url(../images/4.png);
+	background-image:url(../images/4-1.png);
 	background-repeat:no-repeat;
 	background-position:50% 50%;
 	position:relative;
