--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
@@ -29,6 +29,7 @@
 	<script type='text/javascript' src='${staticDomain}/family/libs/jquery.min.js'></script>
 	<script type="text/javascript" src="${staticDomain}/family/libs/jquery.form.js"></script>
 	<script type='text/javascript' src='${staticDomain}/family/libs/jquery.easing.1.3.js'></script>
+	<script type='text/javascript' src='${staticDomain}/family/libs/jquery.scrollTo.js'></script>
 	<link rel="stylesheet" href="${staticDomain}/family/css/jquery.bxslider.css">
 	<script type="text/javascript" src="${staticDomain}/family/libs/jquery.bxslider.min.js"></script>
 	<link rel="stylesheet" href="${staticDomain}/family/css/jquery.mCustomScrollbar.css">
