--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
@@ -9,7 +9,7 @@
 	#end
 	<link rel="shortcut icon" href="${staticDomain}/favicon.ico" type="image/x-icon">
 	#if(${family_module} == "uft")
-		#if(${family_page} == "payconfirm_result")
+		#if(${family_page} == "pay_result")
 			<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
 	    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
 	    	<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
