--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/pay_confirm.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/pay_confirm.vm
@@ -66,7 +66,7 @@
       var orgmsg="";
       var getPayMsg_org=function(){
     	  $(".affirm-organiz-body").each(function(){
-    		  orgmsg=orgmsg+$(this).find(".orgnm").html()+","+$(this).find(".telno").html()+"|";
+    		  orgmsg=orgmsg+$(this).find(".orgnm").html()+",";
     	  })
     	  return orgmsg;
       }
