--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/code_inner.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/code_inner.vm
@@ -8,7 +8,7 @@
         </div>
 		<div class="myaccount">
                 <div class="myleft fl">
-                      <p class="magtb">本月共<strong>3</strong>个缴费通知，总计（元）</p>
+                      <p class="magtb">当前共<strong>0</strong>个缴费通知，总计（元）</p>
                       <p class="magtb"><strong style="font-size: 45px;">--</strong>
                           <a href="javascript:;" class="btn btn-red btn-pay btn-grey">缴费</a></p>
                       <p><a href="javascript:;" class="noneC">历史明细</a></p>
@@ -46,12 +46,12 @@
         <div class="every-account">
               <div class="organization">
                   <p class="fl"><a href="javascript:;" class="noneC">收费机构名称<i class="up-arrow up-arrow-grey showNow"></i></a></p>
-                  <a href="javascript:;" class="fr add-organiz noneC">+新收费机构</a>
+                  <a href="javascript:;" class="fr add-organiz noneC">+添加缴费学生</a>
               </div>
               <div class="student">
                   <ul>
                       <li class="sli1"><p>学生姓名：--</p></li>
-                      <li class="sli2"><p class="sli2-p1">本月共<strong>1</strong>个缴费通知，总计（元）</p><p class="sli2-p2 noneC">--</p></li>
+                      <li class="sli2"><p class="sli2-p1">当前共<strong>0</strong>个缴费通知，总计（元）</p><p class="sli2-p2 noneC">--</p></li>
                       <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2 noneC">--</p></li>
                       <li class="sli4"><a href="javascript:;" class="btn btn-white btn-grey2">缴费</a></li>
                   </ul>
