--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -74,7 +74,7 @@
 				<input type="hidden" name="orgids" id="orgids" value="" />
 	        </form>
             <div class="myleft fl">
-                  <p class="magtb">当前共<strong class="num-red">$allcount</strong>个缴费通知，总计（元）</p>
+                  <p class="magtb">当前共<strong class="num-red">$allcount</strong>个待确认缴费通知，总计（元）</p>
                   <p class="magtb">
                   	  <strong class="num-red" style="font-size: 45px;">$totalplanmonthamt</strong>
                       <a href="javascript:;" class="btn btn-red btn-pay">缴费</a>
@@ -134,7 +134,7 @@
 								 $student.studentnm
 								 #end
 							  </p></li>
-                              <li class="sli2"><p class="sli2-p1">当前共<strong class="num-red">#if($pay.plancount) $pay.plancount #else 0 #end</strong>个缴费通知，总计（元）</p><p class="sli2-p2">  #if($pay.monthtotalamt)$pay.monthtotalamt #else 0.00 #end</p></li>
+                              <li class="sli2"><p class="sli2-p1">当前共<strong class="num-red">#if($pay.plancount) $pay.plancount #else 0 #end</strong>个待确认缴费通知，总计（元）</p><p class="sli2-p2">  #if($pay.monthtotalamt)$pay.monthtotalamt #else 0.00 #end</p></li>
                               <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2">#if($pay.monthbackamt)+$pay.monthbackamt #else 0.00 #end</p></li>
                               <li class="sli4"><a href="javascript:;" class="btn btn-white orgcharge">缴费</a></li>
                           </ul>
