--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -42,7 +42,11 @@
 
         // 缴费    1.总的缴费记录  2.每个机构的缴费记录
         var orgid="";
-        $(".btn-red").on("click",function(){
+        $(".btn-pay").on("click",function(){
+        	if($("#noconfirmcount").html()==0){
+        		alert("对不起，您暂无待缴费信息！");
+        		return false;
+        	}
         	$(".organization .fl a").each(function(){
         		orgid=orgid+$(this).attr("id")+",";
         		$("#orgids").val(orgid);
@@ -52,6 +56,10 @@
         
         $(".orgcharge").each(function(){
         	$(this).on("click",function(){
+        		if($(this).parent().siblings(".sli2").find(".num-red").html()==0){
+        			alert("对不起，您暂无待缴费信息！");
+        			return false;
+        		}
         		orgid=$(".organization .fl").find(".on").attr("id");
         		$("#orgids").val(orgid);
         		$("#sub-form").submit();
@@ -74,9 +82,9 @@
 				<input type="hidden" name="orgids" id="orgids" value="" />
 	        </form>
             <div class="myleft fl">
-                  <p class="magtb">当前共<strong class="num-red">$allcount</strong>个待确认缴费通知，总计（元）</p>
+                  <p class="magtb">当前共<strong class="num-red"> <font id="noconfirmcount">${allcount}</font> </strong>个待确认缴费通知，总计（元）</p>
                   <p class="magtb">
-                  	  <strong class="num-red" style="font-size: 45px;">$totalplanmonthamt</strong>
+                  	  <strong class="num-red" style="font-size: 45px;">${totalplanmonthamt}</strong>
                       <a href="javascript:;" class="btn btn-red btn-pay">缴费</a>
                   </p>
                   <p><a href="${ufbDomain}/family/uft/pay_records.htm" class="hoverLine">历史明细</a></p>
@@ -90,12 +98,12 @@
                     <ul>
                         <li>
                             <p class="magb">资产总额（元）</p>
-                            <p class="font"><strong>#if($hftTotalBalanceDisplay)$hftTotalBalanceDisplay #else 0.00 #end</strong></p>
+                            <p class="font"><strong>#if($hftTotalBalanceDisplay)${hftTotalBalanceDisplay}#else 0.00 #end</strong></p>
                         </li>
 
                         <li class="mli2">
                             <p class="magb">累计收益（元）</p>
-                            <p class="font font-red">#if($hftTotalincome) $hftTotalincome #else 0.00 #end</p>
+                            <p class="font font-red">#if($hftTotalincome) ${hftTotalincome}#else 0.00 #end</p>
                         </li>
                         <li class="mli3">
                             <p class="magb"><a href="${ufbDomain}/family/ufb/pay_index.htm" class="btn btn-white" id="recharge">充 值</a></p>
@@ -115,9 +123,9 @@
                   <p class="fl">
 					#foreach($org in $orglist)
 						#if($!{velocityCount}==1)
-						<a href="javascript:;" class="on" id="$org.orgid">$org.orgnm<i class="up-arrow showNow"></i></a>
+						<a href="javascript:;" class="on" id="${org.orgid}">${org.orgnm}<i class="up-arrow showNow"></i></a>
 						#else
-						<a href="javascript:;" id="$org.orgid">$org.orgnm<i class="up-arrow"></i></a>	
+						<a href="javascript:;" id="${org.orgid}">${org.orgnm}<i class="up-arrow"></i></a>	
 						#end
 					#end
 				  </p>
@@ -134,8 +142,8 @@
 								 $student.studentnm
 								 #end
 							  </p></li>
-                              <li class="sli2"><p class="sli2-p1">当前共<strong class="num-red">#if($pay.plancount) $pay.plancount #else 0 #end</strong>个待确认缴费通知，总计（元）</p><p class="sli2-p2">  #if($pay.monthtotalamt)$pay.monthtotalamt #else 0.00 #end</p></li>
-                              <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2">#if($pay.monthbackamt)+$pay.monthbackamt #else 0.00 #end</p></li>
+                              <li class="sli2"><p class="sli2-p1">当前共<strong class="num-red">#if($pay.plancount) ${pay.plancount}#else 0 #end</strong>个待确认缴费通知，总计（元）</p><p class="sli2-p2">  #if($pay.monthtotalamt)${pay.monthtotalamt}#else 0.00 #end</p></li>
+                              <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2">#if($pay.monthbackamt)+${pay.monthbackamt}#else 0.00 #end</p></li>
                               <li class="sli4"><a href="javascript:;" class="btn btn-white orgcharge">缴费</a></li>
                           </ul>
 					  </div>
@@ -153,12 +161,12 @@
                           </tr>						  
 						  #foreach($plan in ${pay.planList})
                           <tr>
-                              <td>$plan.detailid</td>
-                              <td>$plan.studentnm</td>
-                              <td>$plan.orgnm</td>
-                              <td>$plan.planname<span class="tip">#if(${plan.type}=="AT")月代扣  #else 年代扣  #end</span></td>
-                              <td class="num-red">$plan.payappamount</td>
-                              <td>#if($plan.ackdate!='0000-00-00')$plan.ackdate #else -- #end</td>
+                              <td>${plan.detailid}</td>
+                              <td>${plan.studentnm}</td>
+                              <td>${plan.orgnm}</td>
+                              <td>${plan.planname}<span class="tip">#if(${plan.type}=="AT")月代扣  #else 年代扣  #end</span></td>
+                              <td #if(${plan.ispay}=='0') class="num-red" #elseif(${plan.ispay}=='1') class="num-green" #end>${plan.payappamount}</td>
+                              <td>#if($plan.ackdate!='0000-00-00')${plan.ackdate} #else -- #end</td>
                               <td >#if(${plan.ispay}=='0') 等待缴费 #elseif(${plan.ispay}=='1')<strong class="num-green"> 等待扣款 </strong> #else 缴费成功   #end</td>
                           </tr>
 						  #end		  
